minor changes to fix input misalignment

--- a/api-gateway/src/main/resources/static/css/ownerdetail.css
+++ b/api-gateway/src/main/resources/static/css/ownerdetail.css
@@ -11,13 +11,14 @@
     position: relative;
     top: 0;
     left: 100px;
+    bottom: 100px;
     border: 1px solid #000000;
 }
 
 .image2 {
     position: relative;
-    top: 0;
     left: 100px;
+    bottom: 150px;
     border: 1px solid #000000;
 }
 
@@ -25,9 +26,9 @@
     cursor: pointer;
     position:absolute;
     opacity: 0;
-    top: 0;
     right: 0;
     left: 100px;
+    bottom: 0;
     height:150px;
     width:150px;
     z-index: 60;
